# training_proj

./: README.md  class_attr.py  pyproject.toml  redis_queue.py  singleton.py  singleton_module.py
db_task_queue/config/: settings.py
db_task_queue/tasks/: models.py  services.py  tasks.py
db_task_queue/tasks/management/commands/: start_workers.py
db_task_queue/tasks/migrations/: 0001_initial.py
drf/books/: models.py  serializers.py  views.py
drf/books/migrations/: 0001_initial.py
drf/config/: settings.py  urls.py
module1/: access_control_decorator.py  caching_decorator.py  singleton.py
module2/: async_http.py  parrallel_processing_num_data.py  results.jsonl
module6/: asgi.py  wsgi.py
module_db/: distributed_lock.py  rate_limiter.py  redis_queue.py
