[tool.poetry]
name = "training-proj"
version = "0.1.0"
description = ""
authors = ["Dontgoingforyou <mishael000@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiohttp = "^3.11.11"
aiofiles = "^24.1.0"
fastapi = "^0.115.6"
httpx = "^0.28.1"
uvicorn = "^0.34.0"
flask = "^3.1.0"
requests = "^2.32.3"
django = "^5.1.4"
djangorestframework = "^3.15.2"
django-filter = "^24.3"
redis = "^5.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
